--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
+src/main/resources/application-staging.properties
 .gitattributes
 mvnw
 mvnw.cmd
@@ -39,4 +42,5 @@ build/
 ../.idea
 .mvn/wrapper
 .mvn
+logs
 .mvn/wrapper/maven-wrapper.properties
